Mon May 10 12:25:09 BST 2004 (njh)
----------------------------------
  * libclamav:		Don't call cli_filetype() so often since the latest
  		chanves give false positives about the start of bounce messages
		which opens up DoS attacks, and allows worms hidden in bounce
		messages to be hidden with ease

Mon May 10 02:43:32 CEST 2004 (tk)
----------------------------------
  * clamscan, sigtool: compare clamav.conf's DatabaseDirectory against the
		       hardcoded directory and select more fresh one (by
		       checking version numbers of daily.cvd)

Mon May 10 00:05:23 CEST 2004 (tk)
----------------------------------
  * clamscan: + allow regular expressions in --[in|ex]clude (patch by
	        Alex Cherney <alex*cher.id.au>)
	      + do not overwrite old files in quarantine directory (Alex
	        Cherney)
  * configure/Makefiles: improve NetBSD support

Sun May  9 18:40:55 BST 2004 (njh)
----------------------------------
  * clamav-milter:	Ensure a thread wakes up when another thread dies
		Fix from Damian Menscher <menscher*uiuc.edu> ensures
			Only report that we've dropped privilege if the setuid
		succeeded, fix by Jens Elkner <elkner*linofee.org>
			If logVerbose is set state both starting and started
		messages (based on an idea by "Sergey Y.  Afonin"
			<asy*kraft-s.ru>
			Also added X-Infected-Received-From: header by Sergey
			Report an error if inet_ntop fails in tcp_wrappers
 * docs/man:		Clarified suggested use of max-children only on
 		small machines

Fri May  7 19:46:05 CEST 2004 (tk)
----------------------------------
  * clamscan: fixperms(): do not follow file symlinks (Debian Bug #247574)
  * libclamav: detect more mail file types

Thu May  6 22:14:39 CEST 2004 (tk)
----------------------------------
  * libclamav: scanners: enable decoding of Word6 macro code (Trog)

Thu May  6 16:22:32 BST 2004 (trog)
-----------------------------------
  * libclamav/vba_extract.c: Fix fd leak in Word6 macro code.

Thu May  6 12:27:03 BST 2004 (njh)