@@ -36,6 +36,10 @@ Example
 # Use system logger (can work together with LogFile).
 #LogSyslog
 
+# Specify the type of syslog messages - please refer to 'man syslog'
+# for facility names. Default is LOG_LOCAL6.
+#LogFacility LOG_MAIL
+
 # Enable verbose logging.
 #LogVerbose
 
