@@ -17,6 +17,10 @@
 # Use system logger (can work together with UpdateLogFile).
 #LogSyslog
 
+# Specify the type of syslog messages - please refer to 'man syslog'
+# for facility names. Default is LOG_LOCAL6.
+#LogFacility LOG_MAIL
+
 # By default when freshclam is started by root it drops privileges and
 # switches to the "clamav" user. You can change this behaviour here.
 #DatabaseOwner clamav
